--- a/index.html
+++ b/index.html
@@ -1,31 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Library</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<script src="script.js" defer></script>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Library</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <script src="script.js" defer></script>
 
-<body>
-    <h1>Library</h1>
-    
-    <div id="formPlaceholder"></div>
-    <table id="libraryList">
-        <tr>
-            <th>Title</th>
-            <th>Author</th>
-            <th>Pages</th>
-            <th>Read?</th>
-            <th>Remove</th>
-        </tr>
-    </table>
-    <button id="addBookBtn">Add a Book</button>
-    <br>
-    <a id="links" href="https://github.com/shashwathkpy/Library" target="_blank">
-        <img src="./images/github_icon.png" width="40" height="40" id="icon">
-    <a>
-    <p>Pending UI Work</p>
-</body>
+    <body>
+        <h1>Library</h1>
+        <form id="form" style="visibility: hidden;"></form>
+        <table id="libraryList"></table>
+        <button id="addBookBtn">Add a Book</button>
+        <br>
+        <a id="links" href="https://github.com/shashwathkpy/Library" target="_blank">
+            <img src="./images/github_icon.png" width="40" height="40" id="icon">
+        <a>
+        <p>Pending UI Work</p>
+    </body>
 </html>
